# drifactorial

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
contribute/: index.html
docs/: contribute.md  install.md
docs/usage/: authorization.md  methods.md  shift_restrictions.md
drifactorial/: __init__.py  schemas.py
install/: index.html
scripts/: bump-version.sh  lint.sh  publish.sh  test-files.sh  test.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_drifactorial.py  utils.py
usage/authorization/: index.html
usage/methods/: index.html
usage/shift_restrictions/: index.html
