[tool.poetry]
name = "drifactorial"
version = "0.3.1"
description = "Python client for the Factorial API."
license = "MIT"
authors = ["Dribia Data Research <opensource@dribia.com>"]
maintainers = [
    "Xavier Hoffmann <xrhoffmann@gmail.com>",
]
readme = "README.md"
homepage = "https://dribia.github.io/drifactorial"
repository = "https://github.com/dribia/drifactorial"
documentation = "https://dribia.github.io/drifactorial"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
importlib-metadata = {version = "^4.6.3", python = "<3.8"}
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "21.7b0"
isort = "5.9.3"
mypy = "0.910"
pydocstyle = "6.1.1"
flake8 = "3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.2"
toml = "^0.10.2"
coverage-badge = "^1.0.1"

[tool.pydocstyle]
convention = "google"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
ensure_newline_before_comments = true
known_third_party = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
