[tool.poetry]
name = "drifactorial"
version = "0.4.0"
description = "Python client for the Factorial API."
license = "MIT"
authors = ["Dribia Data Research <opensource@dribia.com>"]
maintainers = [
    "Xavier Hoffmann <xrhoffmann@gmail.com>",
]
readme = "README.md"
homepage = "https://dribia.github.io/drifactorial"
repository = "https://github.com/dribia/drifactorial"
documentation = "https://dribia.github.io/drifactorial"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "3.5.0"
black = "23.12.1"
ruff = "0.1.14"
mypy = "1.8.0"
types-PyYAML = "^6.0.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict_optional = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"